--- a/Aula 3 - GameList/style.css
+++ b/Aula 3 - GameList/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto Mono", monospace;
     text-align: center;
-    background-image: url("https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/background-aluraflix.png");
+    background-image: url("https://sm.ign.com/t/ign_br/news/p/playstatio/playstation-5-gets-a-release-window_9ce6.1200.jpg");
     background-color: #000000;
     background-size: cover;
     background-position: center top;
